--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Jasmina's Portfolio</h1>
     <h2>I am a web developer</h2>
     <hr />
-    <a href="./public/movie-ranking.html">Move Ranking Project</a>
+    <h3><a href="./public/movie-ranking.html">Move Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200" alt="movie preview" />
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite preview" />
     <hr />
     <a href="./public/about.html">About me</a>
